# Python-Basic-homeworks

./: .gitignore  README.md  requirements.txt
.github/workflows/: Codecov.yml  Codecov_07.yml  Django_07_test.yml  Django_08_test.yaml  Django_08_test.yml  Pylint_01_test.yml  Pylint_07_test.yml  Pylint_08_test.yml  Pylint_10_test.yml  django.yml  django_08_test.yaml  workflow.yml
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
homework_03/views/: views.py
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: Dockerfile  app.py  data.py  docker-compose.yaml  fill_db.py  functions.py  main.py  models.py  pyproject.toml  sql.py
homework_06/app/: app.py  main.py
homework_06/app/migrations/versions/: 00611057412c_initial_migration.py
homework_06/app/models/: __init__.py  sql.py
homework_06/app/templates/: base.html  create_record.html  create_user.html  index.html  view_record.html  view_records.html  view_users.html
homework_06/migrations/versions/: 60aa64a15b80_initial_migration.py
homework_06/models/: __init__.py  database.py  sql.py
homework_06/templates/: base.html  create_records.html  index.html  view_record.html  view_records.html
homework_06/templates/macros/: add.html
homework_07/news/: requirements.txt
homework_07/news/news/: settings.py  urls.py
homework_07/news/view_news/: apps.py  models.py  views.py
homework_08/news/: requirements.txt
homework_08/news/news/: settings.py  urls.py
homework_08/news/templates/: base.html
homework_08/news/view_news/: models.py  views.py
homework_09/news/news/: urls.py
homework_09/news/view_news/: forms.py  models.py  test_data.py  test_pages.py  tests.py  views.py
homework_10/: README.md  main.py
homework_11/: README.md
(+17 files in other folders)
