[tool.poetry]
name = "homework-6"
version = "0.1.0"
description = ""
authors = ["Enk0d <D1man680@yandex.com>"]
readme = "README.md"
packages = [{include = "homework_6"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "1.4.44"
aiohttp = "3.8.3"
flask = "^2.2.2"
psycopg2 = "^2.9.5"
asyncpg = "0.27.0"


[tool.poetry.group.dev.dependencies]
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
