[tool.poetry]
name = "homework-6"
version = "0.1.0"
description = ""
authors = ["Enk0d <D1man680@yandex.com>"]
readme = "README.md"
packages = [{include = "homework_6"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
psycopg2 = "^2.9.5"
flask-sqlalchemy = "^3.0.2"
flask-migrate = "^4.0.0"


[tool.poetry.group.dev.dependencies]
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
